--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -2,6 +2,8 @@
         <h1>
             Codeial / Profile Page
         </h1>
-
-        <p><%= user.name %></p>
-        <p><%= user.email %></p>
+        <div class="container">
+            <p><%= user.name %></p>
+            <p><%= user.email %></p>    
+        </div>
+       
