--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,9 @@
 <footer>
-    Page Footer
+    <nav class="navbar fixed-bottom navbar-light bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            
+          </a>
+        </div>
+      </nav>
 </footer>
